removed .collect